# franka_trajectory

./: .gitignore  .gitmodules  CMakeLists.txt
include/: camera.hpp  executor.hpp  trajectories.hpp
src/: camera.cpp  executor.cpp  main.cpp  trajectories.cpp
